# FBX2glTF

./: .gitignore  CMakeLists.txt  README.md
src/: FBX2glTF.cpp  FBX2glTF.h
src/fbx/: Fbx2Raw.cpp
src/gltf/: GltfModel.hpp  Raw2Gltf.cpp  Raw2Gltf.hpp
test/: box.fbx
